err/templated-emails.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/cssutils'...
Listing './lib/python3.5/site-packages/cssutils/css'...
Listing './lib/python3.5/site-packages/cssutils/scripts'...
Listing './lib/python3.5/site-packages/cssutils/stylesheets'...
Listing './lib/python3.5/site-packages/cssutils/tests'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/images'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/import'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/import/images2'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/var'...
Listing './lib/python3.5/site-packages/cssutils/tests/test_encutils'...
Listing './lib/python3.5/site-packages/cssutils-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/encutils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pynliner'...
Listing './lib/python3.5/site-packages/pynliner-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/templated_emails'...
Compiling './lib/python3.5/site-packages/templated_emails/parse_util.py'...
***   File "./lib/python3.5/site-packages/templated_emails/parse_util.py", line 83
    print item[0]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/templated_emails/templates'...
Listing './lib/python3.5/site-packages/templated_emails/templates/templated_emails'...
Listing './lib/python3.5/site-packages/templated_emails/templatetags'...
Compiling './lib/python3.5/site-packages/templated_emails/tests.py'...
***   File "./lib/python3.5/site-packages/templated_emails/tests.py", line 41
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/templated_emails-0.6.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
